# flight_mission

./: .gitignore  2026craic.world  CMakeLists.txt  README.md  package.xml  test.world
config/: flight_mission.yaml
include/: flight_control.h  mission_callbacks.h  mission_header.h  obstacle_avoidance.h  ring_detection.h  vision_detection.h
launch/: flight_mission.launch
shell/: shell_for_330.sh  shell_for_360.sh  shell_for_make_map.sh  shell_for_make_map_on330.sh  shell_for_vmware.sh  shell_for_vmware_ego.sh
src/: flight_control.cpp  main.cpp  map_class.cpp  mission_callbacks.cpp  mission_globals.cpp  mission_tools.cpp  obstacle_avoidance.cpp  ring_detection.cpp  vision_detection.cpp
